# filipstal-personal-website

./: Overview.py  content.py  pyproject.toml  requirements.txt  utils.py
.streamlit/: config.toml
assets/: logos.json
pages/: 1_Experience.py  2_Academic Record.py  2_Portfolio.py  3_Assistant.py
