[tool.poetry]
name = "filipstal-personal-website"
version = "0.1.0"
description = "Personal website for myself!"
authors = ["filip.stal <filip.johan.stal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.37.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
